Fix scrollbar jerking

--- a/MOSFrontend/src/assets/styles/_reset.scss
+++ b/MOSFrontend/src/assets/styles/_reset.scss
@@ -1,3 +1,7 @@
+html {
+  scrollbar-gutter: stable;
+}
+
 a,
 abbr,
 acronym,
